kubernetes/dev/altair-spa/1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: altair-spa-lb-dev
  namespace: "altair-spa-dev"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: altair-spa
